--- a/css/index.css
+++ b/css/index.css
@@ -237,6 +237,15 @@ a {
 	text-decoration: none;
 }
 
+.btn {
+	padding: 10px 20px;
+	border-radius: 10px;
+	background-color: transparent;
+	font-size: 15px;
+	cursor: pointer;
+	margin: 10px 0;
+}
+
 /* Header */
 
 nav {
@@ -308,4 +317,57 @@ nav {
 
 .boxes .box.box10 {
 	background-color: dodgerblue;
+}
+
+/* About Page */
+
+/* About Section */
+.about {
+	margin: 50px auto 20px;
+	border-bottom: 1px dashed black;
+}
+
+.about img {
+	/* margin-bottom: 20px; */
+}
+
+.about-info {
+	padding: 20px;
+}
+
+/* Info cards section */
+.info-cards {
+	display: flex;
+	justify-content: space-evenly;
+	flex-wrap: wrap;
+	align-items: center;
+	width: 100%;
+	height: 900px;
+	margin: 10px auto;
+}
+
+.card {
+	display: flex;
+	flex-direction: column;
+	width: 375px;
+	margin: 10px;
+	margin-bottom: 40px;
+	padding-bottom: 10px;
+	border-bottom: 1px dashed black;
+}
+
+.card img {
+	width: 100%;
+	height: 225px;
+	margin-bottom: 10px;
+}
+
+.card p {
+	margin-bottom: 10px;
+}
+
+/* Work Section */
+.work {
+	margin: 20px auto;
+	padding: 20px;
 }
